# LocalEmbed

./: .env.sample  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: config.py  main.py
app/api/: router.py
app/api/routes/: embeddings_route.py  models_route.py
app/api/schemas/: create_embedding_request.py  list_models.py
app/services/: embedder.py  model_registery.py
