[project]
name = "localembed"
version = "0.1.0"
description = "LocalEmbed"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.116.1",
    "fastembed>=0.8.0",
    "pydantic>=2.12.5",
]
