[project]
name = "localembed"
version = "0.1.3"
description = "A fast and simple local API for generating text embeddings."
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.116.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
]

[project.optional-dependencies]
cpu = ["fastembed>=0.8.0"]
gpu = ["fastembed-gpu>=0.8.0"]

[tool.poe.tasks]
summary = "npx repomix@latest --style markdown"